# QtCMakeTest

./: .gitignore  CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/mainApp/: CMakeLists.txt  main.cpp  main.qml
src/libs/: CMakeLists.txt
src/libs/sharedTest/: CMakeLists.txt  Shared.qml
src/libs/staticTest/: CMakeLists.txt  Static.qml
